# tests_via_playwright

./: .gitignore  README.md  conftest.py  pyproject.toml  settings.py
api/: auth_api.py  base.py  car_api.py  house_api.py  user_api.py
components/constructions/: header.py
components/page_factory/: button.py  component.py  input.py  link.py  list_item.py  table.py  title.py
database/: db.py
models/: cars.py  house.py  users.py
pages/: add_money_page.py  all_users_page.py  base_page.py  buy_car_page.py  create_user_page.py  house_and_user_page.py  login_page.py  user_info_page.py
tests_api/: test_cars.py  test_procedures.py  test_smoke.py  test_users.py
tests_ui/: test_all_users_page.py  test_buy_car_page.py  test_create_user_page.py  test_house_and_user_page.py  test_login_page.py  test_plus_momey_page.py  test_user_info_page.py
utils/: html_table_to_json.py
utils/assertions/: returned_data.py
utils/builders/: car.py  user.py
utils/fixtures/: base.py  payload.py
